# Tamagotchi-Duck

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_DESCRIPTION.md  README.md  SETUP_LLM.md  desktop_duck.py  desktop_health_bar.py  desktop_items.py  duck_tamagotchi.py  main.py  main_menu_widgets.py  pyproject.toml  requirements.txt
chat/: __init__.py  chat_input_bubble.py  chat_service.py  chat_widget.py  topic_filter.py
config/: __init__.py  llm_config.py
llm/: __init__.py  llm_service.py  rag_service.py
memory/: README.md  VECTOR_DB_VS_SQL.md  __init__.py  example_usage.py  vector_store.py
personality/: __init__.py  observer.py  personality_display.py  personality_engine.py
prompts/: __init__.py  chat_prompts.py  few_shot_examples.py  personality_prompts.py
